# Jing-Sharp

./: CMakeLists.txt  README.md
.github/workflows/: Build.yml  release.yml
src/: CMakeLists.txt  peculiarc.cpp  version.cpp  version.h
